<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="${relativePackage}.${activityClass}" >

    <ImageView
            android:id="@+id/iv_splash"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/iv_splash"
            android:src="@drawable/splash" />

    <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tv_subs"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/iv_bluen"
            android:src="@drawable/logo" />

    <TextView
            android:id="@+id/tv_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/iv_splash"
            android:layout_toStartOf="@+id/iv_splash"
            android:background="@drawable/style"
            android:padding="5dp"
            android:gravity="center"
            android:textStyle="bold|italic"
            android:text="@string/tv_loading"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="70sp" />

    <TextView
            android:id="@+id/tv_subs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tv_loading"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/style"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/tv_subs"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="60sp"
            android:textStyle="italic|bold" />

</RelativeLayout>